<resources>
    <string name="title_chat">Chat</string>
    <string name="title_alert">Alert</string>
    <string name="reject">Reject</string>
    <string name="join">Join</string>
    <string name="action_quick_reply">Quick Reply</string>
    <string name="action_mark_room_read">Mark as read</string>
    <string name="notification_new_messages">New Messages</string>
    <string name="chat">Chat</string>
    <string name="type_answer_here">Type Answer Here...</string>
    <string name="downloaded_file">File %1$s has been downloaded!</string>
    <string name="call">Call</string>
    <string name="notification_listening_for_events">Listening for events</string>
    <string name="notification_silent_notifications">Silent notifications</string>
    <string name="notification_noisy_notifications">Noisy notifications</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="error_no_external_application_found">Sorry, no external application has been found to complete this action.</string>
    <string name="notification_initial_sync">Initial Sync…</string>
    <plurals name="room_new_messages_notification">
        <item quantity="one">1 new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>
    <string name="event_redacted_by_user_reason_with_reason">Event deleted by user, reason: %1$s</string>
    <string name="event_redacted_by_admin_reason_with_reason">Event moderated by room admin, reason: %1$s</string>
    <string name="event_redacted_by_user_reason">Event deleted by user</string>
    <string name="event_redacted_by_admin_reason">Event moderated by room admin</string>
    <string name="room_join_rules_public">%1$s made the room public to whoever knows the link.</string>
    <string name="room_join_rules_public_by_you">You made the room public to whoever knows the link.</string>
    <string name="room_join_rules_invite">%1$s made the room invite only.</string>
    <string name="room_join_rules_invite_by_you">You made the room invite only.</string>
    <string name="notice_member_no_changes">"%1$s made no changes"</string>
    <string name="notice_member_no_changes_by_you">"You made no changes"</string>
    <string name="sent_a_video">Video.</string>
    <string name="sent_an_image">Image.</string>
    <string name="sent_an_audio_file">Audio</string>
    <string name="sent_a_file">File</string>
    <string name="send_a_sticker">Sticker</string>
    <string name="verification_request">Verification Request</string>
    <string name="room_one_user_is_typing">%s is typing…</string>
    <string name="room_two_users_are_typing">%1$s &#038; %2$s are typing…</string>
    <string name="room_many_users_are_typing">%1$s &#038; %2$s &#038; others are typing…</string>
    <string name="home_server_url" translatable="false">https://m.navgurukul.org</string>
    <string name="has_been_kicked">You have been kicked from %1$s by %2$s</string>
    <string name="has_been_banned">You have been banned from %1$s by %2$s</string>
    <string name="error_terms_not_accepted">Please retry once you have accepted the terms and conditions of your homeserver.</string>
    <string name="error_network_timeout">Looks like the server is taking too long to respond, this can be caused by either poor connectivity or an error with the server. Please try again in a while.</string>
    <string name="login_error_unknown_host">This URL is not reachable, please check it</string>
    <string name="login_signup_error_user_in_use">That username is taken</string>
    <string name="login_error_ssl_peer_unverified">"SSL Error: the peer's identity has not been verified."</string>
    <string name="login_error_ssl_other">"SSL Error."</string>
    <string name="login_error_bad_json">Malformed JSON</string>
    <string name="login_error_not_json">Did not contain valid JSON</string>
    <string name="login_error_threepid_denied">Your email domain is not authorized to register on this server</string>
    <string name="login_error_limit_exceeded">Too many requests have been sent</string>
    <plurals name="login_error_limit_exceeded_retry_after">
        <item quantity="one">Too many requests have been sent. You can retry in %1$d second…</item>
        <item quantity="other">Too many requests have been sent. You can retry in %1$d seconds…</item>
    </plurals>
    <string name="error_no_network">No network. Please check your Internet connection.</string>
    <string name="auth_invalid_login_param">Incorrect username and/or password</string>
    <string name="login_reset_password_error_not_found">This email is not linked to any account</string>
    <string name="login_error_no_homeserver_found">This is not a valid Matrix server address</string>
    <string name="unknown_error">Sorry, an error occurred</string>
    <string name="identity_server_error_outdated_identity_server">This identity server is outdated. Element support only API V2.</string>
    <string name="identity_server_error_outdated_home_server">This operation is not possible. The homeserver is outdated.</string>
    <string name="identity_server_error_no_identity_server_configured">Please first configure an identity server.</string>
    <string name="identity_server_error_terms_not_signed">Please first accepts the terms of the identity server in the settings.</string>
    <string name="identity_server_error_bulk_sha256_not_supported">For your privacy, Element only supports sending hashed user emails and phone number.</string>
    <string name="identity_server_error_binding_error">The association has failed.</string>
    <string name="identity_server_error_no_current_binding_error">The is no current association with this identifier.</string>
    <string name="no_connectivity_to_the_server_indicator">Connectivity to the server has been lost</string>
    <string name="no_connectivity_to_the_server_indicator_airplane">Airplane mode is on</string>
    <string name="room_do_not_have_permission_to_post">You do not have permission to post to this room</string>
    <string name="room_tombstone_versioned_description">This room has been replaced and is no longer active</string>
    <string name="room_tombstone_continuation_link">The conversation continues here</string>
    <string name="resource_limit_contact_admin">"contact your service administrator"</string>
    <string name="resource_limit_soft_default">"This homeserver has exceeded one of its resource limits so <b>some users will not be able to log in</b>."</string>
    <string name="resource_limit_hard_default">"This homeserver has exceeded one of its resource limits."</string>
    <string name="resource_limit_soft_mau"> "This homeserver has hit its Monthly Active User limit so "<b>some users will not be able to log in</b>."</string>
    <string name="resource_limit_hard_mau">"This homeserver has hit its Monthly Active User limit."</string>
    <string name="resource_limit_soft_contact">"Please %s to get this limit increased."</string>
    <string name="resource_limit_hard_contact">"Please %s to continue using this service."</string>
    <string name="room_message_placeholder_not_encrypted">Send a message (unencrypted)…</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="option_send_files">Send files</string>
    <string name="accept">Accept</string>
    <string name="send_you_invite">Sent you an invitation</string>
    <string name="invited_by">Invited by %s</string>
    <string name="a11y_jump_to_bottom">Jump to bottom</string>
    <string name="room_tombstone_continuation_description">This room is a continuation of another conversation</string>
    <string name="room_tombstone_predecessor_link">Click here to see older messages</string>
    <string name="rendering_event_error_type_of_event_not_handled">"Element does not handle events of type '%1$s'"</string>
    <string name="rendering_event_error_exception">"Element encountered an issue when rendering content of event with id '%1$s'"</string>
    <string name="edited_suffix">"(edited)"</string>
    <string name="malformed_message">Malformed event, cannot display</string>
    <string name="merged_events_expand">expand</string>
    <string name="merged_events_collapse">collapse</string>
    <string name="timeline_unread_messages">Unread messages</string>
    <plurals name="membership_changes">
        <item quantity="one">1 change</item>
        <item quantity="other">%d changes</item>
    </plurals>
    <plurals name="notification_unread_notified_messages">
        <item quantity="one">1 unread notified message</item>
        <item quantity="other">%d unread notified messages</item>
    </plurals>
    <plurals name="notification_compat_summary_line_for_room">
        <item quantity="one">%1$s: 1 message</item>
        <item quantity="other">%1$s: %2$d messages</item>
    </plurals>
    <plurals name="notification_compat_summary_title">
        <item quantity="one">%d notification</item>
        <item quantity="other">%d notifications</item>
    </plurals>
    <plurals name="room_profile_section_more_member_list">
        <item quantity="one">"One person"</item>
        <item quantity="other">"%1$d people"</item>
    </plurals>
    <string name="room_settings_banned_users_title">Banned users</string>
    <plurals name="room_settings_banned_users_count">
        <item quantity="one">%d banned user</item>
        <item quantity="other">%d banned users</item>
    </plurals>
    <string name="room_created_summary_item">%s created and configured the room.</string>
    <string name="room_created_summary_item_by_you">You created and configured the room.</string>
    <string name="notice_crypto_unable_to_decrypt_merged">Waiting for encryption history</string>
    <string name="notice_crypto_unable_to_decrypt_friendly_desc">Due to end-to-end encryption, you might need to wait for someone\'s message to arrive because the encryption keys were not properly sent to you.</string>
    <string name="sas_verified">Verified!</string>
    <string name="encryption_enabled">Encryption enabled</string>
    <string name="encryption_enabled_tile_description">Messages in this room are end-to-end encrypted. Learn more &amp; verify users in their profile.</string>
    <string name="encryption_not_enabled">Encryption not enabled</string>
    <string name="encryption_unknown_algorithm_tile_description">The encryption used by this room is not supported</string>
    <string name="event_redacted">Message deleted</string>
    <string name="decline">Decline</string>
    <string name="verification_request_you_accepted">You accepted</string>
    <string name="notice_crypto_unable_to_decrypt_final">You cannot access this message</string>
    <string name="notice_crypto_unable_to_decrypt_friendly">Waiting for this message, this may take a while</string>
    <string name="verification_conclusion_warning">Untrusted sign in</string>
    <string name="command_error">Command error</string>
    <string name="unrecognized_command">Unrecognized command: %s</string>
    <string name="demo_mgs_reply">I am fine thanks. What about you Annu? How your work is going?</string>
    <string name="name_of_reciver">Abhisek Gupta</string>
    <string name="sender_mgs">How are you? what are you doing? hjhjfk jkfkjjfj mkmkjfnrkj kmfjnfjnfjrfn mflkmlkmrklkdmkflmmflnr</string>
    <string name="sender_name">Annu Bharti</string>
    <string name="avatar">Avatar</string>
    <string name="room_list_quick_actions_favorite_add">Add to favorites</string>
    <string name="room_list_quick_actions_settings">Settings</string>
    <string name="delete_event_dialog_content">Are you sure you wish to remove (delete) this event? Note that if you delete a room name or topic change, it could undo the change.</string>
    <string name="delete_event_dialog_reason_checkbox">Include a reason</string>
    <string name="delete_event_dialog_reason_hint">Reason for redacting</string>
</resources>