<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/itemVerificationTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/ic_shield_black"
        android:drawablePadding="6dp"
        android:gravity="center"
        android:textColor="?textPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:text="@string/verification_request" />


    <TextView
        android:id="@+id/itemVerificationDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:textColor="?textPrimary"
        android:textSize="12sp"
        tools:text="Alice (@alice:navgurukul.org)" />

    <LinearLayout
        android:id="@+id/itemVerificationButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sas_verification_verified_decline_button"
            android:layout_marginEnd="16dp"
            android:text="@string/decline"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sas_verification_verified_accept_button"
            android:text="@string/accept"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/itemVerificationStatusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/verification_request_you_accepted"
        android:textColor="?attr/textSecondary"
        android:visibility="gone"
        tools:visibility="visible"
        android:textSize="13sp" />

</LinearLayout>