<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/spacing_3x"
    android:paddingTop="@dimen/spacing_3x"
    android:paddingEnd="@dimen/spacing_3x"
    android:paddingBottom="@dimen/spacing_3x">

    <TextView
        android:id="@+id/dialogConfirmationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody2"
        tools:text="@string/delete_event_dialog_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dialogReasonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_1x"
        android:checked="true"
        android:textAppearance="?textAppearanceBody2"
        android:text="@string/delete_event_dialog_reason_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogConfirmationText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogReasonTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:hint="@string/delete_event_dialog_reason_hint"
        app:counterEnabled="true"
        app:counterMaxLength="240"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogReasonCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogReasonInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>