<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/inviteAvatarView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="@dimen/spacing_2x"
        android:layout_marginTop="@dimen/spacing_2x"
        android:layout_marginEnd="@dimen/spacing_2x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/inviteNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="@dimen/spacing_4x"
        android:paddingEnd="@dimen/spacing_4x"
        android:textAppearance="?textAppearanceEmphasized1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inviteAvatarView"
        tools:text="@sample/saral.json/data/displayName" />

    <TextView
        android:id="@+id/inviteIdentifierView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/spacing_4x"
        android:paddingEnd="@dimen/spacing_4x"
        android:textAppearance="?textAppearanceBody2"
        android:textColor="?textSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inviteNameView"
        tools:text="@sample/saral.json/data/mxid" />

    <TextView
        android:id="@+id/inviteLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/send_you_invite"
        android:textAppearance="?textAppearanceEmphasized2"
        android:textColor="?textSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inviteIdentifierView" />

    <org.navgurukul.commonui.platform.ButtonStateView
        android:id="@+id/inviteAcceptView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:minWidth="120dp"
        app:bsv_button_text="@string/accept"
        app:bsv_loaded_image_src="@drawable/ic_check"
        app:bsv_use_flat_button="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/inviteRejectView"
        app:layout_constraintTop_toTopOf="@id/inviteRejectView" />

    <org.navgurukul.commonui.platform.ButtonStateView
        android:id="@+id/inviteRejectView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:minWidth="120dp"
        app:bsv_button_text="@string/reject"
        app:bsv_loaded_image_src="@drawable/ic_check"
        app:bsv_use_flat_button="true"
        app:layout_constraintEnd_toStartOf="@+id/inviteAcceptView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inviteLabelView"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/inviteAcceptView" />


</merge>